# jucombinator

./: Cargo.toml  README.rst  jucombinator.pyi  justfile  pyproject.toml
python/jucombinator/: __init__.py  jucombinator.pyi
src/: lib.rs
tests/: test_substitute.py  test_substitute_1.py
