[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "jucombinator"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "rdkit",
]
readme = "README.rst"

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest",
]


[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.black]
line-length = 79

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
  "rdkit.*",
]
ignore_missing_imports = true
